2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.m: Implement generation of MXL introspection data.
	* Tests/GNUMakefile: Add new test file.
	* Tests/TestDKProperty.m: Add test for XML introspection data generation.

2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>
	
	* Source/DKIntrospectionNode.h
	* Source/DKIntrospectionNode.m:
	Declare -XMLNode on all introspection nodes.
	* Source/DKMethod.m: Implement generation of MXL introspection data.
	* Tests/TestDKMethod.m: Add test for XML introspection data generation.

2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKArgument.m: Add test for annotated XML introspection data.
	
2012-01-26 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKArgument.m: Add test for XML generation of arguments.
	* Source/DKArgument.h
	* Source/DKArgument.m: Small tweaks to XML generation.

2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Improve last commit.
	* configure: Regenerate.

2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: When selecting an Objective-C compiler, prefer the
	value of $CC if $OBJC is not set. Also, if the user does not specify
	a specific compiler and clang is installed, default to using clang.
	* config.make.in: Update for new compiler selection.
	* configure: Regenerate.

2011-10-09 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/GNUmakefile
	* Documentation/dk_make_protocol.1
	* Documentation/GNUmakefile.postamble:
	Add manpage for dk_make_protocol. 

2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.m: Fix memory leak.
	* Source/DKNotificationCenter.m: Rearrange to silence invalid warning
	about use-after-free.

	Bugfixes for problems detected by clang's static analyser.

2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.m: Absence of the change notification annotation in
	the introspection data implies that the property sends change